--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -11,8 +13,9 @@ body {
 
 .logo {
     cursor: pointer;
-    font-size: 1.3rem;
-    padding-top: 0.5rem;
+    font-size: 2.5rem;
+    font-weight: 200;
+    padding-top: 2rem;
     position: relative;
 }
 
@@ -20,11 +23,11 @@ body {
     content: '';
     display: inline-block;
     position: absolute;
-    width: 5rem;
-    height: 0.5rem;
+    width: 10rem;
+    height: 0.8rem;
     background-color: #fcc773;
     z-index: -1;
-    transform: translateX(-5.5rem) translateY(0.9rem);
+    transform: translateX(-10.5rem) translateY(2.4rem);
 }
 
 .main_body {
@@ -39,11 +42,28 @@ body {
     height: 100%;
     width: 100%;
     padding: 1rem;
+    padding-left: 2rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     justify-content: center;
     align-items: center;
+}
+
+#head {
+    font-size: 4rem;
+    font-weight: 200;
+}
+
+#head::after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    width: 13rem;
+    height: 1rem;
+    background-color: #fcc773;
+    z-index: -1;
+    transform: translateX(-16rem) translateY(3.9rem);
 }
 
 .results {
@@ -52,6 +72,11 @@ body {
     gap: 1.2rem;
     align-items: center;
     flex-wrap: wrap;
+}
+
+#score {
+    font-size: 1.8rem;
+    font-weight: 200;
 }
 
 .type_area {
@@ -87,22 +112,30 @@ button {
 }
 
 #comp_input {
-    font-size: 1.7rem;
+    font-size: 2.3rem;
 }
 
 #tim_er {
-    font-size: 1.8rem;
+    font-size: 2.3rem;
     color: #fca311;
 }
 
 .type_area input {
-    width: 25rem;
-    height: 5rem;
-    font-size: 1.2rem;
-    background-color: transparent;
-    border: 0.02rem solid #fca311;
+    width: 41vw;
+    height: 11vh;
+    font-size: 1.4rem;
+    background-color: rgb(243, 243, 243);
+    border: 0.02rem solid transparent;
     border-radius: 1rem;
     padding: 1rem;
+}
+
+.type_area input:hover {
+    border: 0.02rem solid transparent;
+}
+
+.type_area input:focus {
+    border: 0.02rem solid transparent;
 }
 
 
@@ -110,28 +143,38 @@ button {
 and (min-device-width : 768px) 
 and (max-device-width : 1023.9px) {
     html {
-        font-size: 93%;
+        font-size: 91%;
     }
 
     body {
         padding: 1rem 5rem;
+    }
+
+    .type_area input {
+        width: 50vw;
+        height: 11vh;
     }
 }
 
 
 
 @media only screen 
-and (min-device-width : 481px) 
+and (min-device-width : 480.1px) 
 and (max-device-width : 813px) {
     html {
-        font-size: 85%;
+        font-size: 81%;
     }
 
     body {
         padding: 1rem 2rem;
     }
+
+    .type_area input {
+        width: 70vw;
+        height: 11vh;
+    }
     
-    button {
+    /*button {
         width: 8rem;
         height: 6rem;
         font-size: 1.3rem;
@@ -153,7 +196,7 @@ and (max-device-width : 813px) {
     .type_area input {
         width: 18rem;
         height: 4rem;
-    }
+    }*/
 }
 
 
@@ -164,18 +207,19 @@ and (max-device-width : 813px) {
 and (min-device-width : 320px) 
 and (max-device-width : 480px) {
     html {
-        font-size: 81%;
+        font-size: 71%;
     }
 
     body {
         padding: 0.5rem 1rem;
     }
 
-    .results {
-        flex-wrap: wrap;
+    .type_area input {
+        width: 70vw;
+        height: 9vh;
     }
-    
-    button {
+
+    /*button {
         width: 7rem;
         height: 5rem;
         font-size: 1.25rem;
@@ -192,10 +236,5 @@ and (max-device-width : 480px) {
     
     #tim_er {
         font-size: 1.15rem;
-    }
-    
-    .type_area input {
-        width: 15rem;
-        height: 4rem;
-    }
+    }*/
 }
